--- a/src/styles/pyagram.scss
+++ b/src/styles/pyagram.scss
@@ -41,7 +41,6 @@
 .pyagram-ordered-collection {
   @include border();
   display: inline-table;
-  border-collapse: collapse;
   .pyagram-collection-element {
     @include border();
   }
