--- a/src/styles/table.scss
+++ b/src/styles/table.scss
@@ -4,3 +4,7 @@ table {
   border-collapse: separate;
   border-spacing: $table-spacing;
 }
+
+.border-collapse {
+  border-collapse: collapse;
+}
